...
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/edt_money"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="70"
                    android:background="?attr/colorPrimary"
                    android:foregroundGravity="right|center"
                    android:gravity="right|center"
...
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:text="103" />
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/category_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginLeft="8dp"
                android:gravity="center|left"
                android:textColor="@color/white"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtField_date_holder"
                        app:layout_constraintVertical_bias="0.0">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_memo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:gravity="top"
                            android:inputType="textMultiLine"
                            android:maxLines="4"
                            android:minLines="2" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.ssmmhh.jibam.presentation.addedittransaction.CalculatorKeyboard
                        android:id="@+id/keyboard"
                        android:layout_width="match_parent"
                        android:layout_height="252dp"
                        android:layoutDirection="ltr"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
...

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.appbar.AppBarLayout>

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/bottom_sheet_viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/fab_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="16dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_check_green_24dp" />
...
