...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/main_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center|start"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="70"
...
