...
                            app:tint="@color/black" />

                    </LinearLayout>
                </com.google.android.material.appbar.AppBarLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/transaction_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="@{(view) -> viewmodel.openAddTransactionFragment()}"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            </LinearLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:contentDescription="@string/create_new_transaction"
                app:srcCompat="@drawable/ic_round_add_24" />
...
